--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -223,6 +223,7 @@
 .idfc-loan-calculator {
   padding: 40px 20px 0 20px;
   background-color: #ffffff;
+  margin-bottom: 40px;
 
   .total-amount {
     text-align: center;
