--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -58,7 +58,7 @@
 }
 
 .nps-know-more {
-  padding: 15px;
+  padding: 15px 0;
   border-radius: 5px;
   margin: 20px auto;
 
@@ -669,9 +669,13 @@
   background: #fff;
   box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  margin-top: 20px;
+  margin: 20px 10px;
   padding-bottom: 15px;
   position: relative;
+
+  .container-padding {
+    margin: 0 20px;
+  }
 
   img {
     position: relative;
@@ -722,6 +726,7 @@
 
       span {
         color: #878787;
+        font-weight: 600;
       }
     }
 
@@ -944,5 +949,41 @@
 
   .statusprocess {
     padding: 10px 15px;
+  }
+}
+
+.nps-payment-callback {
+  .invest-sucess {
+    text-align: center;
+    margin-top: 50px;
+    position: relative;
+    padding-top: 1px;
+    background: #fff;
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin: 10px;
+    top: 20px;
+    padding: 20px 0;
+
+    .icon {
+      margin: 30px 0;
+    }
+
+    h3 {
+      font-size: 20px;
+      font-family: "LatoB";
+      margin: 0;
+      margin-top: 30px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      color: #878787;
+      font-size: 18px;
+
+      span {
+        font-family: "LatoB";
+      }
+    }
   }
 }
