Added nri and change address details

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -242,6 +242,16 @@
   main {
     .input {
       margin-top: 20px;
+
+      .MuiGrid-item {
+        min-width: fit-content;
+
+        label {
+          .inside-text {
+            margin-right: 5px;
+          }
+        }
+      }
     }
 
     .RadioWithIcon {
