added cta back-ground color css

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -411,6 +411,12 @@ button {
   text-align: center;
 }
 
+.FlexButtonGenericColor{
+  background-color: rgb(53, 203, 93);
+  color: white;
+  border-radius: 6px;
+}
+
 .FooterTwoButtonLayout button.borderButton {
   background: #fff;
   border: 1px solid;
