--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -1056,8 +1056,7 @@
     }
 
     .card-lending {
-      box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12),
-        0px 0px 8px rgba(0, 0, 0, 0.0483186) !important;
+      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.12), 0px 0px 0px 2px rgba(0, 0, 0, 0.0483186) !important;
     }
 
     .top-title {
@@ -1103,19 +1102,8 @@
   .block3-info {
     margin: 30px 0 0px;
 
-    .partners {
-      display: flex;
-      padding: 10px 0;
-      text-align: center;
-      font-size: 16px;
-      line-height: 19px;
-      color: #160d2e;
-      margin-top: 20px;
-
-      img {
-        box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12),
-          0px 2px 2px rgba(0, 0, 0, 0.0483186);
-      }
+    .top-title {
+      margin-bottom: 20px;
     }
   }
 
