--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -229,7 +229,7 @@
     text-align: center;
     padding-top: 20px;
     background-color: var(--highlight);
-    color: #160D2E;
+    color: #160d2e;
     margin: 0 -20px 0 -20px;
     font-size: 13px;
   }
@@ -246,7 +246,7 @@
     background: var(--highlight);
     margin: -20px -20px 0;
     padding: 0 20px;
-    color: #767E86;
+    color: #767e86;
     font-size: 13px;
   }
 }
@@ -692,10 +692,10 @@
     opacity: 0.55;
   }
 
-  .header-title-page{
+  .header-title-page {
     font-size: 20px;
     font-weight: 700;
-    color: #160D2E;
+    color: #160d2e;
     line-height: 1.5;
     padding: 0;
     display: flex;
@@ -705,7 +705,7 @@
 
     .count {
       font-size: 15px;
-      color: #81888F;
+      color: #81888f;
     }
 
     .total {
@@ -1056,7 +1056,8 @@
     }
 
     .card-lending {
-      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.12), 0px 0px 0px 2px rgba(0, 0, 0, 0.0483186) !important;
+      box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.12),
+        0px 0px 0px 2px rgba(0, 0, 0, 0.0483186) !important;
     }
 
     .top-title {
@@ -1104,6 +1105,21 @@
 
     .top-title {
       margin-bottom: 20px;
+    }
+
+    .partners {
+      display: flex;
+      align-items: center;
+      background: white;
+      padding: 20px;
+      border-radius: 6px;
+      border: 1px solid var(--highlight);
+
+      .partner-name {
+        font-size: 16px;
+        color: #160d2e;
+        margin-left: 20px;
+      }
     }
   }
 
@@ -1431,7 +1447,7 @@
 }
 
 .loan-report-details {
-  color: #160D2E;
+  color: #160d2e;
   font-size: 13px;
 
   .disclaimer {
