--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -562,21 +562,6 @@ body[data-device="mobile"] {
   margin: 0 0 10px -10px;
 }
 
-.generic-button-outlined {
-  color: var(--secondary) !important;
-  background-color: white !important;
-  border: 1px solid var(--secondary) !important;
-}
-.generic-button-textonly {
-  color: var(--secondary) !important;
-  background-color: white !important;
-  font-weight: bold !important;
-}
-
-.generic-button-raised {
-  color: white;
-  background-color: var(--secondary);
-}
 
 .generic-bottomsheet {
   .top {
@@ -591,7 +576,6 @@ body[data-device="mobile"] {
       margin: 0 0px 0 0;
     }
   }
-  
 
   div#alert-dialog-description {
     margin: -20px 0 0 0;
@@ -896,4 +880,22 @@ body[data-device="mobile"] {
     background-color: #119A4B;
     opacity: 0.7;
   }
+}
+
+.generic-button-outlined {
+  color: var(--secondary) !important;
+  background-color: white !important;
+  border: 1px solid var(--secondary) !important;
+}
+.generic-button-textonly {
+  color: var(--secondary) !important;
+  background-color: white !important;
+  font-weight: bold !important;
+  width: fit-content !important;
+  justify-content: end !important;
+}
+
+.generic-button-raised {
+  color: white;
+  background-color: var(--secondary);
 }
