--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -468,3 +468,89 @@
     }
   }
 }
+
+.reports-fundswise-summary {
+  margin-top: -20px;
+  line-height: 1.5;
+  color: #333333;
+
+  .fund {
+    border: solid 1px #e8e8e8;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    -o-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    position: relative;
+    padding: 10px;
+    margin-bottom: 10px;
+
+    h5 {
+      text-align: left;
+      margin: 0;
+      font-size: 16px;
+      font-weight: 500;
+      padding: 15px 0 5px 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .right-info {
+        .icon {
+          font-size: 18px;
+          color: gray;
+          vertical-align: middle;
+        }
+      }
+    }
+
+    .head {
+      color: grey;
+      margin-bottom: 10px;
+
+      .margin-left {
+        margin-left: 10px;
+      }
+    }
+
+    .fundswise-summary-details {
+      display: flex;
+      flex-wrap: wrap;
+
+      .content {
+        width: 50%;
+        color: gray;
+
+        h5 {
+          color: #333333;
+        }
+
+        .green {
+          color: #71bf1c;
+        }
+
+        .red {
+          color: #d0021b;
+        }
+      }
+    }
+  }
+}
+
+#fundwise-summary-menu {
+  .MuiPaper-elevation8 {
+    -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04);
+  }
+
+  .menu-item {
+    display: flex;
+    padding-right: 20px;
+    align-items: center;
+
+    img {
+      width: 22px;
+      margin-right: 11px;
+    }
+  }
+}
