--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -787,8 +787,11 @@
           color: #4a4a4a;
           font-weight: 700;
           font-size: 10px;
-          text-transform: uppercase;
           text-align: center;
+
+          .small {
+            font-weight: 500;
+          }
         }
       }
 
