--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1089,12 +1089,40 @@ input#pan {
   line-height: 1.6;
 }
 
+
+.health-insurance-title-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  img{
+    margin: 0;
+    align-self: flex-start;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
+.health-landing-covers-title{
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.common-top-page-title-dark{
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  color: #160D2E;
+  margin-bottom: 17px;
+}
 .common-top-page-subtitle-dark {
   color: #102f50;
   font-size: 16px;
-  font-weight: 500;
-  margin: -10px 0 30px 0;
-  line-height: 1.6;
+  font-weight: 700;
+  margin: -8px 0 0px 0;
+  line-height: 19px;
 }
 
 .common-how-steps {
