--- a/react_webviews/src/withdraw/Style.scss
+++ b/react_webviews/src/withdraw/Style.scss
@@ -22,6 +22,11 @@
   main.Card {
     margin: 15px;
   }
+
+  main.Card .MuiButton-outlined {
+    border: 1px solid var(--secondary);
+  }
+  
   .Card .withdraw-mid-tile-img {
     display: block;
     width: 45%;
@@ -54,6 +59,10 @@
   .Card {
     margin: 0;
     border-radius: 0;
+  }
+
+  .Card .MuiButton-label {
+    color: var(--secondary); 
   }
 
   .footer .title {
@@ -102,6 +111,9 @@
   letter-spacing: 0.005em;
 }
 .withdraw-amount-dialog-content .withdraw-amount-form {
+  .MuiButton-textSecondary {
+    color: var(--secondary);
+  }
   .MuiInput-root {
     display: block;
     margin: 18px 0;
