--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -68,6 +68,28 @@
     margin-bottom: 15px;
   }
 
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
+
+  ::-webkit-scrollbar:vertical {
+    width: 3px;
+  }
+
+  ::-webkit-scrollbar:horizontal {
+    height: 3px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #D8D8D8;
+    border-radius: 2px;
+  }
+
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: #ffffff;
+  }
+
   .agreement-block {
     height: 180px;
     overflow: scroll;
@@ -312,7 +334,7 @@
   }
 
   .bct-content {
-    padding: 30px 0 0 10px !important;
+    padding: 30px 0 0 0px !important;
   }
 
   .bottom-content {
@@ -364,6 +386,7 @@
 
     img {
       margin-right: 20px;
+      margin-top: 3px;
     }
 
     div {
@@ -373,7 +396,7 @@
     }
 
     .reqd_info {
-      margin-top: 4%;
+      // margin-top: 4%;
     }
   }
 
@@ -1231,7 +1254,7 @@
       align-items: baseline;
 
       .dot {
-        background-color: #d8d8d8;
+        background-color: var(--primary);
         width: 6px;
         height: 6px;
         border-radius: 50%;
