--- a/react_webviews/src/withdraw/Style.scss
+++ b/react_webviews/src/withdraw/Style.scss
@@ -1,6 +1,7 @@
 .withdraw-background-override {
   background-color: #f1f1f1;
   line-height: 1.5;
+  overflow-y: auto;
 }
 #withdraw-balance {
   .report-header {
@@ -26,7 +27,7 @@
   main.Card .MuiButton-outlined {
     border: 1px solid var(--secondary);
   }
-  
+
   .Card .withdraw-mid-tile-img {
     display: block;
     width: 45%;
