--- a/react_webviews/src/withdraw/Style.scss
+++ b/react_webviews/src/withdraw/Style.scss
@@ -92,6 +92,7 @@
 
   .footer .withdraw-list-item .text {
     margin-left: 20px;
+    width: 100%;
   }
 
   .footer .withdraw-list-item .text .desc {
