--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -964,3 +964,140 @@
     }
   }
 }
+
+.reports-switch {
+  line-height: 1.5;
+  margin: -20px -20px -56px -20px;
+  padding: 20px 20px 40px 20px;
+  color: #333333;
+  background: #f1f1f1;
+
+  header {
+    margin: -20px -20px 0 -20px;
+    background-color: var(--primary);
+    color: white;
+    padding: 15px;
+    text-align: center;
+
+    h4 {
+      padding: 26px 0;
+      margin: 0;
+      font-weight: 500;
+      line-height: 1.1;
+      font-size: 18px;
+    }
+
+    .fund-info {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+
+      .content {
+        .text {
+          color: #f1f1f1;
+        }
+
+        .sub-text {
+          padding-top: 11px;
+          font-size: 16px;
+        }
+      }
+    }
+
+    .filter-options {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      column-gap: 16px;
+      margin-top: 26px;
+
+      .text {
+        font-size: 18px;
+      }
+
+      img {
+        width: 14px;
+      }
+
+      .dropdown {
+        padding: 0px 10px;
+        border: 1px solid white;
+        border-radius: 5px;
+        min-width: 110px;
+
+        .Dropdown {
+          margin: -15px 0 -20px 0;
+
+          .MuiInput-input {
+            color: white;
+          }
+
+          .MuiSelect-icon {
+            color: white;
+          }
+        }
+      }
+    }
+  }
+
+  main {
+    margin: 0 -20px;
+    padding: 20px 20px 0 20px;
+    background: #f1f1f1;
+
+    .fund {
+      border: 1px solid #d8d5d5;
+      background: white;
+      margin-bottom: 20px;
+
+      h4 {
+        font-size: 17px;
+        color: black;
+        font-weight: 500;
+        margin: 20px;
+      }
+
+      .details {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background: #f5f1f1;
+        border-top: 1px dashed;
+        margin-top: 40px;
+        padding: 10px 4px;
+        font-size: 16px;
+        text-align: center;
+
+        .mf-type {
+          margin: 0 10px;
+        }
+
+        .flex {
+          display: flex;
+          align-items: center;
+          margin: 0 10px;
+          column-gap: 5px;
+
+          img {
+            margin-top: -2px;
+          }
+        }
+
+        .more {
+          cursor: pointer;
+          
+          img {
+            width: 16px;
+          }
+        }
+
+        button {
+          width: fit-content;
+          background-color: var(--secondary);
+          color: white;
+          border-radius: 8px;
+        }
+      }
+    }
+  }
+}
