--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -81,7 +81,7 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: #D8D8D8;
+    background-color: #d8d8d8;
     border-radius: 2px;
   }
 
@@ -114,6 +114,7 @@
       color: #767e86;
       font-size: 13px;
       line-height: 1.6;
+      width: 95%;
     }
   }
 }
@@ -394,10 +395,10 @@
       font-size: 13px;
       line-height: 1.5;
     }
+  }
 
-    .reqd_info {
-      // margin-top: 4%;
-    }
+  .bt {
+    align-items: flex-start !important;
   }
 
   .sub-head {
@@ -521,7 +522,6 @@
     width: 47%;
     cursor: pointer;
     border-radius: 6px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12), 0px 2px 5px rgba(0, 0, 0, 0.05);
   }
 }
 
@@ -1306,7 +1306,6 @@
     width: 47%;
     cursor: pointer;
     border-radius: 6px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12), 0px 2px 5px rgba(0, 0, 0, 0.05);
   }
 }
 
