--- a/react_webviews/src/loan_idfc/components/Style.scss
+++ b/react_webviews/src/loan_idfc/components/Style.scss
@@ -915,13 +915,13 @@
   .head {
     font-size: 15px;
     font-weight: 600;
-    margin: 20px 15px 0;
+    margin: 20px 20px 0;
   }
 
   .sub-head {
     display: flex;
     justify-content: space-between;
-    padding: 10px 15px;
+    padding: 10px 20px;
     color: #767e86;
     font-size: 13px;
   }
@@ -1004,8 +1004,9 @@
 }
 
 .loan-status {
+  margin-bottom: 0px !important;
   #congratulations {
-    margin: -20px -20px 0;
+    margin: 0px -20px;
   }
 
   .loan-eligible {
