--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -1085,7 +1085,7 @@
 
         .more {
           cursor: pointer;
-          
+
           img {
             width: 16px;
           }
@@ -1096,6 +1096,109 @@
           background-color: var(--secondary);
           color: white;
           border-radius: 8px;
+        }
+      }
+    }
+  }
+}
+
+.reports-switch-now {
+  color: #333333;
+  line-height: 1.5;
+  margin: -20px -20px -56px -20px;
+  padding-bottom: 56px;
+  background: #f1f1f1;
+
+  header {
+    display: flex;
+    align-items: flex-start;
+    background-color: white;
+    padding: 20px;
+
+    .content {
+      border: 2px dashed #a7a7a7;
+      height: fit-content;
+      padding: 5px;
+      width: 50%;
+      margin: 0 15px;
+
+      .name {
+        color: black;
+        font-weight: 500;
+        font-size: 14px;
+      }
+
+      .text {
+        font-size: 12px;
+        margin-top: 19px;
+      }
+
+      .amount {
+        font-size: 12px;
+      }
+
+      .type {
+        color: #3aada9;
+        background: #f3f3f3;
+        width: fit-content;
+        padding: 1px 11px 1px 11px;
+        border-radius: 13px;
+        margin-left: 3px;
+        margin-top: 3px;
+        text-transform: capitalize;
+        font-size: 11px;
+      }
+    }
+
+    img {
+      width: 26px;
+    }
+  }
+
+  main {
+    margin: 20px 0;
+
+    .reports-folio {
+      padding: 20px;
+      background-color: white;
+      margin-bottom: 20px;
+
+      .title {
+        font-size: 16px;
+
+        .text {
+          color: black;
+        }
+      }
+
+      .flex {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .content {
+          max-width: 50%;
+
+          .text {
+            margin-top: 10px;
+            font-size: 14px;
+          }
+
+          .sub-text {
+            font-size: 16px;
+            color: #040404;
+            font-weight: 500;
+          }
+        }
+      }
+
+      .input {
+        margin-top: 20px;
+
+        .input-button {
+          border-radius: 8px;
+          color: green;
+          border: 1px solid green;
         }
       }
     }
