--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -1204,3 +1204,89 @@
     }
   }
 }
+
+.reports-sip {
+  color: #333333;
+  line-height: 1.5;
+
+  .sip {
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0pt 1pt 4pt 2pt rgba(0, 0, 0, 0.08);
+    padding: 15px;
+    margin-bottom: 15px;
+    cursor: pointer;
+
+    .status {
+      font-size: 10px;
+      letter-spacing: 2px;
+      margin-bottom: 5px;
+      font-weight: 700;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+      align-items: center;
+
+      .dot {
+        border-radius: 50%;
+        width: 8px;
+        height: 8px;
+        margin-right: 5px;
+        margin-top: -2px;
+      }
+    }
+
+    .yellow {
+      color: #c2a20c;
+      .dot {
+        background-color: #c2a20c;
+      }
+    }
+
+    .green {
+      color: #71bf1c;
+      .dot {
+        background-color: #71bf1c;
+      }
+    }
+
+    .red {
+      color: #d0021b;
+      .dot {
+        background-color: #d0021b;
+      }
+    }
+
+    .blue {
+      color: #3792fc;
+      .dot {
+        background-color: #3792fc;
+      }
+    }
+
+    .mf-name {
+      color: #0a1d32;
+      font-size: 16px;
+      line-height: 26px;
+      margin-bottom: 10px;
+    }
+
+    .bottom {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .content {
+        display: flex;
+        align-items: center;
+        color: #0a1d32;
+        font-size: 14px;
+
+        img {
+          width: 20px;
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+}
