--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -1481,3 +1481,65 @@
     }
   }
 }
+
+.reports-sip-pause-period-container {
+  height: 100%;
+
+  .reports-sip-pause-period-main {
+    height: calc(100% - 106px);
+
+    .reports-sip-pause-period {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 20px;
+
+      .mf-name {
+        color: #0a1d32;
+        font-size: 16px;
+        line-height: 26px;
+        margin-bottom: 30px;
+      }
+
+      .content {
+        display: flex;
+        align-items: flex-start;
+        margin-bottom: 20px;
+
+        img {
+          width: 30px;
+          margin-right: 20px;
+        }
+
+        .title {
+          font-size: 12px;
+          font-weight: 700;
+          color: #0a1d32;
+        }
+      }
+
+      .slider-container {
+        padding: 20px 0 30px;
+        .head {
+          margin-bottom: 20px;
+          font-size: 16px;
+          text-align: center;
+
+          b {
+            font-weight: 700;
+          }
+        }
+
+        .bottom {
+          display: flex;
+          justify-content: space-between;
+          color: #767e86;
+          font-size: 10px;
+          letter-spacing: 1px;
+          font-weight: 500;
+        }
+      }
+    }
+  }
+}
