--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -1494,6 +1494,7 @@
       flex-direction: column;
       justify-content: space-between;
       padding-bottom: 20px;
+      line-height: 1.5;
 
       .mf-name {
         color: #0a1d32;
@@ -1504,7 +1505,7 @@
 
       .content {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         margin-bottom: 20px;
 
         img {
@@ -1540,6 +1541,62 @@
           font-weight: 500;
         }
       }
+    }
+  }
+}
+
+.reports-sip-pause-cancel-detail {
+  color: #333333;
+  line-height: 1.5;
+
+  .mf-name {
+    color: #0a1d32;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 30px;
+  }
+
+  .content {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+
+    img {
+      width: 30px;
+      margin-right: 20px;
+    }
+
+    .title {
+      font-size: 12px;
+      font-weight: 700;
+      color: #0a1d32;
+    }
+  }
+
+  .alert {
+    background: #fff5f6;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 30px;
+
+    .title {
+      display: flex;
+      color: #d0021b;
+      font-size: 12px;
+      font-weight: 700;
+      margin-bottom: 15px;
+      align-items: center;
+
+      img {
+        width: 15px;
+        margin-right: 10px;
+      }
+    }
+
+    p {
+      font-size: 14px;
+      color: #767e86;
+      line-height: 26px;
     }
   }
 }
