--- a/react_webviews/src/withdraw/components/style.scss
+++ b/react_webviews/src/withdraw/components/style.scss
@@ -40,7 +40,94 @@
   }
 }
 
+.withdraw-fisdom-radio{
+  fieldset{
+    div{
+      label{
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 20px;
+        margin: 0px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
 //////////// End of Withdraw Remark ////////////////
 
+
+//////////Withdraw Switch ///////////////////////////
+
+.withdraw-switch{
+  border-bottom: 2px solid #e4e4e4;
+  .withdraw-mf{
+    display: flex;
+    align-items: center;
+    .withdraw-mf-icon{
+      margin-right: 15px;
+      width: 20px;
+      height: 20px;
+      img{
+        width: 100%;
+      }
+    }
+
+    .withdraw-mf-details{
+      display: flex;
+      flex-direction: column;
+
+      .withdraw-mf-name{
+        font-size: 18px;
+        color: black;
+
+      }
+
+      .withdraw-mf-amount{
+        font-size: 14px;
+        color: #71716c;
+        margin-bottom: 5px;
+        margin: 5px 0px;
+      }
+
+      .withdraw-mf-more{
+        padding: 5px 10px;
+        background-color: #f4f3f3;
+        width: max-content;
+        border-radius:10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        cursor: pointer;
+        color: #333333;
+
+        img{
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+
+  .withdraw-switch-mid{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 0px;
+
+    .withdraw-switch-icon{
+      height: 50px;
+      img{
+        height: 100%;
+      }
+    }
+  }
+
+  .withdraw-switch-amount{
+    font-size: 16px;
+  }
+}
+
+/////////End of Withdraw Switch //////////////////
 
 
