Added Sip Request Screen

--- a/react_webviews/src/reports/Style.scss
+++ b/react_webviews/src/reports/Style.scss
@@ -1619,3 +1619,39 @@
     margin: 14px 0 0 0;
   }
 }
+
+.reports-sip-request {
+  padding-top: 50px;
+  color: #333333;
+  line-height: 1.5;
+
+  .img {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .title {
+    color: #0a1d32;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .note {
+    font-size: 14px;
+    line-height: 26px;
+    color: #3f5469;
+    margin-bottom: 20px;
+  }
+
+  .text {
+    margin-bottom: 10px;
+
+    b {
+      color: #3f5469;
+      font-weight: 700;
+    }
+  }
+}
